; ModuleID = '/home/carl/AnghaBench/sqlcipher/tool/extr_lemon.c_Symbol_arrayof.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/tool/extr_lemon.c_Symbol_arrayof.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, %struct.TYPE_3__* }
%struct.TYPE_3__ = type { %struct.symbol* }
%struct.symbol = type { i32 }

@x2a = common dso_local global %struct.TYPE_4__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.symbol** @Symbol_arrayof() #0 {
  %1 = alloca %struct.symbol**, align 8
  %2 = alloca %struct.symbol**, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = load %struct.TYPE_4__*, %struct.TYPE_4__** @x2a, align 8
  %6 = icmp eq %struct.TYPE_4__* %5, null
  br i1 %6, label %7, label %8

7:                                                ; preds = %0
  store %struct.symbol** null, %struct.symbol*** %1, align 8
  br label %41

8:                                                ; preds = %0
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** @x2a, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 8
  store i32 %11, i32* %4, align 4
  %12 = load i32, i32* %4, align 4
  %13 = call i64 @calloc(i32 %12, i32 8)
  %14 = inttoptr i64 %13 to %struct.symbol**
  store %struct.symbol** %14, %struct.symbol*** %2, align 8
  %15 = load %struct.symbol**, %struct.symbol*** %2, align 8
  %16 = icmp ne %struct.symbol** %15, null
  br i1 %16, label %17, label %39

17:                                               ; preds = %8
  store i32 0, i32* %3, align 4
  br label %18

18:                                               ; preds = %35, %17
  %19 = load i32, i32* %3, align 4
  %20 = load i32, i32* %4, align 4
  %21 = icmp slt i32 %19, %20
  br i1 %21, label %22, label %38

22:                                               ; preds = %18
  %23 = load %struct.TYPE_4__*, %struct.TYPE_4__** @x2a, align 8
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %23, i32 0, i32 1
  %25 = load %struct.TYPE_3__*, %struct.TYPE_3__** %24, align 8
  %26 = load i32, i32* %3, align 4
  %27 = sext i32 %26 to i64
  %28 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %25, i64 %27
  %29 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %28, i32 0, i32 0
  %30 = load %struct.symbol*, %struct.symbol** %29, align 8
  %31 = load %struct.symbol**, %struct.symbol*** %2, align 8
  %32 = load i32, i32* %3, align 4
  %33 = sext i32 %32 to i64
  %34 = getelementptr inbounds %struct.symbol*, %struct.symbol** %31, i64 %33
  store %struct.symbol* %30, %struct.symbol** %34, align 8
  br label %35

35:                                               ; preds = %22
  %36 = load i32, i32* %3, align 4
  %37 = add nsw i32 %36, 1
  store i32 %37, i32* %3, align 4
  br label %18

38:                                               ; preds = %18
  br label %39

39:                                               ; preds = %38, %8
  %40 = load %struct.symbol**, %struct.symbol*** %2, align 8
  store %struct.symbol** %40, %struct.symbol*** %1, align 8
  br label %41

41:                                               ; preds = %39, %7
  %42 = load %struct.symbol**, %struct.symbol*** %1, align 8
  ret %struct.symbol** %42
}

declare dso_local i64 @calloc(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
